[project]
name = "handwriting-synthesis"
version = "1.0.0"
description = "Handwriting synthesis for pen plotters"
requires-python = ">=3.11,<3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.11,<3.14"
numpy = "*"
scipy = "*"
streamlit = "*"

[tool.pixi.tasks]
start = "streamlit run app.py --server.headless true"
